# Astro-121

./: pyproject.toml  readme.md
src/lab1/: Lab1.py
src/lab1_pkg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
